# elisys-esp32-weather-station-client-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  mod.rs
src/config/: config.sample.rs
src/dto/: config_request.rs  config_response.rs  mod.rs  register_device.rs  request_i_am_alive.rs  request_submit.rs
src/service/: client_service.rs  mod.rs  orchestrator_service.rs  peripheral_service.rs
src/util/: thread_util.rs
